update to employ more accurate scaling and address use of broom package. Fixes fortify error "region" not found.

--- a/ggplotMapsTEST.Rmd
+++ b/ggplotMapsTEST.Rmd
@@ -19,7 +19,7 @@ includeSourceDocuments()
 <!-- Don't edit the material above this line -->
 
 ```{r}
-head(dat)
+#head(dat)
 ```
 
 
@@ -39,6 +39,7 @@ url = "https://data.cdc.gov/api/views/cjae-szjv/rows.csv?accessType=DOWNLOAD"
 dat <- read.csv(url, stringsAsFactors = FALSE)
 ```
 
+Data Cleaning
 ```{r}
 # Colnames tolower
 names(dat) <- tolower(names(dat))
@@ -58,9 +59,14 @@ county_dat$fips <- formatC(county_dat$fips, width = 5, format = "d", flag = "0")
 # Convert full state names to abbreviations for a clean df merge later.
 county_dat$state <- state.abb[match(county_dat$state,state.name)]
 ### End data prep
+```
 
+
+Map Acquisition and Cleaning
+```{r}
 # Download county shape file.
 us.map <- tigris::counties(cb = TRUE, year = 2015)
+names(us.map)
 
 # Remove Alaska(2), Hawaii(15), Puerto Rico (72), Guam (66), Virgin Islands (78), American Samoa (60)
 #  Mariana Islands (69), Micronesia (64), Marshall Islands (68), Palau (70), Minor Islands (74)
@@ -69,10 +75,18 @@ us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69"
 # Make sure other outling islands are removed.
 us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
                                         "95", "79"),]
+
+dog <- as.data.frame(us.map)
+head(dog)
+
 # Projuce map
-county_map <- ggplot2::fortify(us.map, region="GEOID")
+#county_map <- ggplot2::fortify(us.map, region="GEOID")
+library(broom)
+county_map <- tidy(us.map, region="GEOID")
+
 
 head(county_map)
+
 
 library(dplyr)
 county_map <- left_join(county_map, county_dat, by = c("id" = "fips"))
@@ -82,11 +96,14 @@ head(county_map)
 
 Plot
 ```{r}
+library(mapproj)
 ggplot() +
-    geom_polygon(data=county_map, aes(x=long, y=lat, map_id=id, group=group, fill = value), color="black", size=0.25) +
-
+    #blank county map
+    geom_polygon(data= county_map, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
+    #Air quality data
+    geom_polygon(data= county_map, aes(x=long, y=lat, group=group, fill = value), color="black", size=0.25) +
+    ggplot2::coord_map() +
     scale_fill_gradientn(colors = c("green", "red"))  +
-    #coord_map(“polyconic”) +
     labs(title="Air Quality") + 
     theme_bw() +
     theme(axis.line=element_blank(),
