prelim leaflet interactive maps testing

--- a/ggplotMapsTEST.Rmd
+++ b/ggplotMapsTEST.Rmd
@@ -164,6 +164,23 @@ ggplot() +
           legend.title=element_blank())
 ```
 
+Interactive maps with Leaflet
+```{r}
+library(leaflet)
+
+leaflet() %>%
+  addTiles(county_map$value) #%>%
+  #addPolygons(data = )
+
+leaflet() %>% addTiles() %>% setView(-93.65, 42.0285, zoom = 4) %>%
+  addWMSTiles(
+    "http://mesonet.agron.iastate.edu/cgi-bin/wms/nexrad/n0r.cgi",
+    layers = "nexrad-n0r-900913",
+    options = WMSTileOptions(format = "image/png", transparent = TRUE),
+    attribution = "Weather data © 2012 IEM Nexrad"
+  )
+```
+
 
 
 ggplot2::ggplot() +
@@ -188,4 +205,4 @@ ggplot2::ggplot() +
           panel.background = element_blank(),
           legend.title=element_blank())
 
-```
+
