--- a/ggplotMapsTEST.Rmd
+++ b/ggplotMapsTEST.Rmd
@@ -18,20 +18,18 @@ includeSourceDocuments()
 ```
 <!-- Don't edit the material above this line -->
 
-```{r}
-#head(dat)
-```
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+SPATIAL VISUALIZATION: METHOD 1: GGPLOT
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-
-Delete this sentence and start entering your text here.
+Useful Spatial Packages
 ```{r}
 library(sp)
-library(ggplot2)
-library(rgeos)
-library(rgdal)
-library(maptools)
-library(tigris)
+#library(rgeos)
+#library(maptools)
 ```
+
+Download a sample dataset to visualize: air quality 
 ```{r}
 ### Begin data prep
 # Grab air/water quality data from the EPA
@@ -41,75 +39,60 @@ dat <- read.csv(url, stringsAsFactors = FALSE)
 
 Data Cleaning
 ```{r}
-# Colnames tolower
+# Convert to lowercase to create standard format among all datasets
 names(dat) <- tolower(names(dat))
-names(dat)
 dat$countyname <- tolower(dat$countyname)
-# Wide data set, subset only what we need.
+
+# Wide data set -> ubset only what we need
 county_dat <- subset(dat, measureid == "296", 
                  select = c("countyfips","reportyear", "statename", "countyname", "value", "unitname"))
-names(county_dat)
 
 county_dat <- subset(county_dat, reportyear == 2011, select = c("countyfips","statename", "countyname", "value", "unitname"))
+
 # Rename columns to make for a clean df merge later.
 colnames(county_dat) <- c("fips", "state", "county_name", "value", "unitname")
+
 # Have to add leading zeos to any FIPS code that's less than 5 digits long to get a good match.
-# I'm cheating by using C code. sprintf will work as well.
+
+# This is some other person's method to use C code. sprintf will work as well.
 county_dat$fips <- formatC(county_dat$fips, width = 5, format = "d", flag = "0")
+
 # Convert full state names to abbreviations for a clean df merge later.
 county_dat$state <- state.abb[match(county_dat$state,state.name)]
-### End data prep
+
 ```
 
+County Shapefile Acquisition and Cleaning
 
-Map Acquisition and Cleaning
+Downloading county boundary shapefiles (METHOD 1: TIGRIS Package)
 ```{r}
-# Download county shape file.
+library(tigris)
+# Download county shape file from US Census using streamlined TIGRIS package. 
+#cb = TRUE indicates that we're choosing simplified cartographic boundaries
 us.map <- tigris::counties(cb = TRUE, year = 2015)
-#us.map <- readOGR(dsn = "C:\\Users\\kagex\\stats133Project\\tl_2016_us_county", layer = "tl_2016_us_county", stringsAsFactors = FALSE)
-names(us.map)
-summary(us.map)
-View(us.map)
+
+#names(us.map)
+#summary(us.map)
+#View(us.map)
 
 ```
+
+Downloading county boundary shapefiles (METHOD 2: Manual read-in of raw shapefile from US Census)
 ```{r}
-
-# Remove Alaska(2), Hawaii(15), Puerto Rico (72), Guam (66), Virgin Islands (78), American Samoa (60)
-#  Mariana Islands (69), Micronesia (64), Marshall Islands (68), Palau (70), Minor Islands (74)
-us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69",
-                                        "64", "68", "70", "74"),]
-# Make sure other outling islands are removed.
-us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
-                                        "95", "79"),]
-
-dog <- as.data.frame(us.map)
-head(dog)
-
-# Projuce map
-#county_map <- ggplot2::fortify(us.map, region="GEOID")
-library(broom)
-county_map <- tidy(us.map, region="GEOID")
+library(rgdal)
+# Download county shape file from https://www.census.gov/geo/maps-data/data/tiger.html
+us.map <- readOGR(dsn = "C:\\Users\\Katrlyn\\stats133Project\\cb_2016_us_county_500k", layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
 
 
-head(county_map)
+#names(us.map)
+#summary(us.map)
+#View(us.map)
 
-
-library(dplyr)
-county_map <- left_join(county_map, county_dat, by = c("id" = "fips"))
-
-head(county_map)
+#Paths for other group members
+#"C:\\Users\\kagex\\stats133Project\\cb_2016_us_county_500k"
 ```
 
-```{r}
-# Download county shape file.
-#us.map <- tigris::counties(cb = TRUE, year = 2015)
-#Source https://www.census.gov/geo/maps-data/data/tiger.html
-us.map2 <- readOGR(dsn = "C:\\Users\\kagex\\stats133Project\\cb_2016_us_county_500k", layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
-names(us.map2)
-summary(us.map2)
-View(us.map2)
-
-```
+Map data Cleaning
 ```{r}
 # Remove Alaska(2), Hawaii(15), Puerto Rico (72), Guam (66), Virgin Islands (78), American Samoa (60)
 #  Mariana Islands (69), Micronesia (64), Marshall Islands (68), Palau (70), Minor Islands (74)
@@ -118,30 +101,31 @@ us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69"
 # Make sure other outling islands are removed.
 us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
                                         "95", "79"),]
+#To see the shapfile structure:
+#dog <- as.data.frame(us.map)
+#head(dog)
 
-dog <- as.data.frame(us.map)
-head(dog)
+#Converting shapefile to dataframe for visualization
 
-# Projuce map
+#deprecated method:
 #county_map <- ggplot2::fortify(us.map, region="GEOID")
+
 library(broom)
 county_map <- tidy(us.map, region="GEOID")
 
-
-head(county_map)
-
-
+#Join sample air quality data to spatial data
 library(dplyr)
 county_map <- left_join(county_map, county_dat, by = c("id" = "fips"))
 
 head(county_map)
 ```
 
-Plot
+Plotting the data
 https://www.census.gov/cgi-bin/geo/shapefiles/index.php?year=2016&layergroup=Counties+%28and+equivalent%29
 
 ```{r}
 library(mapproj)
+library(ggplot2)
 ggplot() +
     #blank county map
     geom_polygon(data= county_map, aes(x=long, y=lat, group=group), fill = "white", color="black", size=0.25) +
@@ -164,7 +148,11 @@ ggplot() +
           legend.title=element_blank())
 ```
 
-Interactive maps with Leaflet
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+SPATIAL VISUALIZATION: METHOD 1: Interactive maps with Leaflet
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Random Playing with leaflet
 ```{r}
 library(leaflet)
 
@@ -180,6 +168,8 @@ leaflet() %>% addTiles() %>% setView(-93.65, 42.0285, zoom = 4) %>%
     attribution = "Weather data © 2012 IEM Nexrad"
   )
 ```
+
+Useful packages
 ```{r}
 library(sp)
 library(rgeos)
@@ -188,36 +178,46 @@ library(maptools)
 library(dplyr)
 library(leaflet)
 library(scales)
+```
 
-### Data Cleaning
-
-# Grab air quality data from the EPA
+Download air quality data 
+```{r}
+# air quality data from the EPA
 url = "https://data.cdc.gov/api/views/cjae-szjv/rows.csv?accessType=DOWNLOAD"
 dat <- read.csv(url, stringsAsFactors = FALSE)
 ```
 
+Clean air quality data
 ```{r}
-# Colnames tolower
+# Convert to lowercase
 names(dat) <- tolower(names(dat))
 dat$countyname <- tolower(dat$countyname)
-# Wide data set, subset only what we need.
+
+# Subset only what we need to use
 county_dat <- subset(dat, measureid == "296", 
                      select = c("reportyear","countyfips","statename", "countyname", "value", "unitname")) %>%
     subset(reportyear==2011, select = c("countyfips", "value"))
+
 # Rename columns to make for a clean df merge later.
 colnames(county_dat) <- c("GEOID", "airqlty")
-# Have to add leading zeos to any FIPS code that's less than 5 digits long to get a good match.
-# I'm cheating by using C code. sprintf will work as well.
+
+# Add leading zeos to any FIPS code that's less than 5 digits long to get a good match.
+# FIND A BETTER METHOD
 county_dat$GEOID <- formatC(county_dat$GEOID, width = 5, format = "d", flag = "0")
-### End data prep
+```
 
-
-
+Download county boundary shapefile
+```{r}
 # Download county shape file from Tiger.
 # https://www.census.gov/geo/maps-data/data/cbf/cbf_counties.html
-#us.map <- readOGR(dsn = ".", layer = "cb_2013_us_county_20m", stringsAsFactors = FALSE)
-us.map <- readOGR(dsn = "C:\\Users\\kagex\\stats133Project\\cb_2016_us_county_500k", layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
+us.map <- readOGR(dsn = "C:\\Users\\Katrlyn\\stats133Project\\cb_2016_us_county_500k", layer = "cb_2016_us_county_500k", stringsAsFactors = FALSE)
 
+# Other paths:
+# "C:\\Users\\kagex\\stats133Project\\cb_2016_us_county_500k"
+```
+
+Clean county shapefile 
+```{r}
 # Remove Alaska(2), Hawaii(15), Puerto Rico (72), Guam (66), Virgin Islands (78), American Samoa (60)
 #  Mariana Islands (69), Micronesia (64), Marshall Islands (68), Palau (70), Minor Islands (74)
 us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69",
@@ -225,8 +225,11 @@ us.map <- us.map[!us.map$STATEFP %in% c("02", "15", "72", "66", "78", "60", "69"
 # Make sure other outling islands are removed.
 us.map <- us.map[!us.map$STATEFP %in% c("81", "84", "86", "87", "89", "71", "76",
                                         "95", "79"),]
-# Merge spatial df with downloade ddata.
+# Merge spatial df with air quality data.
 leafmap <- merge(us.map, county_dat, by=c("GEOID"))
+
+
+# I HAVE NO IDEA HOW THINGS WORK BELOW THIS POINT 
 
 # Format popup data for leaflet map.
 popup_dat <- paste0("<strong>County: </strong>", 
@@ -244,30 +247,4 @@ leaflet(data = leafmap) %>% addTiles() %>%
                 popup = popup_dat)
 
 ```
-
-
-
-
-ggplot2::ggplot() +
-    geom_map(data=county_map, map=county_map,
-             aes(x=long, y=lat, map_id=id, group=group),
-             fill="#ffffff", color="#0e0e0e", size=0.15) +
-    geom_map(data=county_dat, map=county_map, aes_string(map_id="fips", fill=county_dat$value),
-             color="#0e0e0e", size=0.15) +
-    scale_fill_gradientn(colors = c("green", "red"))  +
-    #coord_map(“polyconic”) +
-    labs(title="Air Quality") + 
-    theme_bw() +
-    theme(axis.line=element_blank(),
-          axis.text.x=element_blank(),
-          axis.text.y=element_blank(),
-          axis.ticks=element_blank(),
-          axis.title.x=element_blank(),
-          axis.title.y=element_blank(),
-          panel.grid.major = element_blank(),
-          panel.grid.minor = element_blank(),
-          panel.border = element_blank(),
-          panel.background = element_blank(),
-          legend.title=element_blank())
-
 
