--- a/CountyReferenceTable.Rmd
+++ b/CountyReferenceTable.Rmd
@@ -18,13 +18,25 @@ includeSourceDocuments()
 ```
 <!-- Don't edit the material above this line -->
 
-Reading in reference table concerning county information.
+Reading in reference table concerning county information **FROM 2010**
 Source: https://www.census.gov/geo/reference/codes/cou.html
 
 ```{r}
 #Note: colClasses = "character" helps keep the leading 0s
 df <- read.table("https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt", sep = ",", col.names = c("State", "StateFIPS", "CountyFIPS", "CountyName", "ClassFIPSCode" ), colClasses = "character")
 
-head(df)
+summary(df)
+
+#Shannon County (46-113) change to Oglala Lakota County (46-102) (Effective 2015)
+df2 <- data.frame(State = "SD", StateFIPS = "46", CountyFIPS = "102", CountyName = "Oglala Lakota County", ClassFIPSCode = "H1")
+df3 <- rbind(df, df2)
+
+
+#Merge state and county into one FIPS code
+df4 <- df3 %>% mutate(FIPS = paste(StateFIPS, CountyFIPS, sep = ""))
+
+summary(df4)
+View(df4)
+
 ```
 
