--- a/CountyReferenceTable.Rmd
+++ b/CountyReferenceTable.Rmd
@@ -23,20 +23,25 @@ Source: https://www.census.gov/geo/reference/codes/cou.html
 
 ```{r}
 #Note: colClasses = "character" helps keep the leading 0s
-df <- read.table("https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt", sep = ",", col.names = c("State", "StateFIPS", "CountyFIPS", "CountyName", "ClassFIPSCode" ), colClasses = "character")
+df <- read.table("https://www2.census.gov/geo/docs/reference/codes/files/national_county.txt", sep = ",", col.names = c("State", "StateFIPS", "CountyFIPS", "CountyName", "ClassFIPSCode" ), colClasses = "character", quote = "")
 
-summary(df)
+#summary(df)
 
 #Shannon County (46-113) change to Oglala Lakota County (46-102) (Effective 2015)
 df2 <- data.frame(State = "SD", StateFIPS = "46", CountyFIPS = "102", CountyName = "Oglala Lakota County", ClassFIPSCode = "H1")
-df3 <- rbind(df, df2)
+df <- rbind(df, df2)
 
 
 #Merge state and county into one FIPS code
-df4 <- df3 %>% mutate(FIPS = paste(StateFIPS, CountyFIPS, sep = ""))
+df <- df %>% mutate(FIPS = paste(StateFIPS, CountyFIPS, sep = ""))
 
-summary(df4)
-View(df4)
+#summary(df4)
+#View(df4)
+
+#Minimal dataframe to facilitate joins
+df_compact <- df %>% select(c(CountyName, FIPS))
+
+head(df_compact)
 
 ```
 
