--- a/USCountyUrbanForestData.Rmd
+++ b/USCountyUrbanForestData.Rmd
@@ -71,6 +71,44 @@ AllStates$downloadLinks
  
 ```
 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Downloading and loading Excel files (Method 1: Using Tempfiles)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+```{r}
+#for(i in 1:1){ #length(AllStates$downloadLinks)){
+  #Download xls file
+  url <- AllStates$downloadLinks[1]
+  tmp <- tempfile(fileext=".xls")
+  download.file(url,destfile=tmp, mode="wb")
+  
+  #Read-in relevant sheets (7 and 10)
+  xl_7 <- read_excel(tmp, sheet = 7, skip = 3)
+  xl_10 <- read_excel(tmp, sheet = 10, skip = 3)
+  
+  #Clean and select relevant variables
+  
+  head(xl_7)
+  xl_7 <- xl_7 %>% select(c(`X__1`, `m2/person__1`, `Available green space (ha)`))
+  #Units: Tree canopy Cover (m2/person), Available green space (ha)
+  colnames(xl_7) <- c("CountyName","TreeCanopyCover", "AvailGreenSpace")
+  
+  
+  head(xl_7)
+  head(xl_10)
+
+  #unlink(tmp)
+#}
+
+
+
+
+#names(df)[names(df) == 'old.var.name'] <- 'new.var.name'
+  
+```
+
+
+
+
 
 Download each excel file, load it into R as a dataframe, and assign the data frame to the respective state name.
 NOTE THE DOWNLOAD TIME IS ENORMOUS!!! DON'T RUN THIS ON ALL STATES YET, IT CRASHES EVERYTHING.
