--- a/USCountyUrbanForestData.Rmd
+++ b/USCountyUrbanForestData.Rmd
@@ -81,21 +81,41 @@ Downloading and loading Excel files (Method 1: Using Tempfiles)
   tmp <- tempfile(fileext=".xls")
   download.file(url,destfile=tmp, mode="wb")
   
+```
+
+```{r}
+  
   #Read-in relevant sheets (7 and 10)
   xl_7 <- read_excel(tmp, sheet = 7, skip = 3)
   xl_10 <- read_excel(tmp, sheet = 10, skip = 3)
   
   #Clean and select relevant variables
   
-  head(xl_7)
+  #head(xl_7)
   xl_7 <- xl_7 %>% select(c(`X__1`, `m2/person__1`, `Available green space (ha)`))
-  #Units: Tree canopy Cover (m2/person), Available green space (ha)
-  colnames(xl_7) <- c("CountyName","TreeCanopyCover", "AvailGreenSpace")
+  #Units: Tree canopy Covering (m2/person), Available green space (ha)
+  colnames(xl_7) <- c("CountyName","TreeCanopy", "AvailGreenSpace")
   
-  
+  #summary(xl_7)
   head(xl_7)
+  
+  xl_10 <- xl_10 %>% select(c(`X__1`, `Tree % h`))
+  #Tree canopy cover in developped regions (%)
+  colnames(xl_10) <- c("CountyName", "TreeCanopyCover")
+  #head(xl_10)
+  
+  #Exclude the variable descriptions at the end of the sheet
+  xl_10 <- na.omit(xl_10)
   head(xl_10)
-
+  #summary(xl_10)
+  
+  #Join the two sheets
+  joined <- full_join(xl_7, xl_10, by = "CountyName")
+  View(joined)
+  
+  joined_clean <- joined %>% subset(CountyName != "Statewide")
+  
+  View(joined_clean)
   #unlink(tmp)
 #}
 
